--- a/spireplayer-unity.Editor.csproj
+++ b/spireplayer-unity.Editor.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>WSAPlayer:21</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -192,6 +194,7 @@
     <Compile Include="Assets\Editor\Test\Content\DummyAssetManager.cs" />
     <Compile Include="Assets\Editor\Test\Content\DummyContentFactory.cs" />
     <Compile Include="Assets\Editor\Test\Data\FileManager_Tests.cs" />
+    <Compile Include="Assets\Editor\Test\Scripting\ScriptManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Util\StandardQueryResolver_Tests.cs" />
     <Compile Include="Assets\Editor\Tools\Asset\AssetManifestEditor.cs" />
     <Compile Include="Assets\Editor\Tools\DataMigration\SpireDataMigrator.cs" />
