--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WSAPlayer:21</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -131,6 +133,7 @@
     <Compile Include="Assets\Source\Asset\AssetManagerConfiguration.cs" />
     <Compile Include="Assets\Source\Asset\AssetManifest.cs" />
     <Compile Include="Assets\Source\Asset\AssetReference.cs" />
+    <Compile Include="Assets\Source\Asset\EditorAssetLoader.cs" />
     <Compile Include="Assets\Source\Asset\IAssetLoader.cs" />
     <Compile Include="Assets\Source\Asset\IAssetManager.cs" />
     <Compile Include="Assets\Source\Asset\IAssetUpdateService.cs" />
