--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WSAPlayer:21</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -127,18 +125,6 @@
     <Compile Include="Assets\Source\Application\Injection\SpirePlayerModule.cs" />
     <Compile Include="Assets\Source\Application\Injection\Tags\MainCamera.cs" />
     <Compile Include="Assets\Source\ApplicationStateData\ApplicationStateData.cs" />
-    <Compile Include="Assets\Source\Asset\AssetBundleLoader.cs" />
-    <Compile Include="Assets\Source\Asset\AssetInfo.cs" />
-    <Compile Include="Assets\Source\Asset\AssetManager.cs" />
-    <Compile Include="Assets\Source\Asset\AssetManagerConfiguration.cs" />
-    <Compile Include="Assets\Source\Asset\AssetManifest.cs" />
-    <Compile Include="Assets\Source\Asset\AssetReference.cs" />
-    <Compile Include="Assets\Source\Asset\EditorAssetLoader.cs" />
-    <Compile Include="Assets\Source\Asset\IAssetLoader.cs" />
-    <Compile Include="Assets\Source\Asset\IAssetManager.cs" />
-    <Compile Include="Assets\Source\Asset\IAssetUpdateService.cs" />
-    <Compile Include="Assets\Source\Asset\Services\EditorAssetUpdateService.cs" />
-    <Compile Include="Assets\Source\Asset\StandardAssetLoader.cs" />
     <Compile Include="Assets\Source\Async\Async.cs" />
     <Compile Include="Assets\Source\Debug\Log\UwpSocketLogger.cs" />
     <Compile Include="Assets\Source\Debug\Render\DebugRenderController.cs" />
@@ -195,11 +181,24 @@
     <Compile Include="Assets\Source\Spire\App\ISceneManager.cs" />
     <Compile Include="Assets\Source\Spire\App\Scene.cs" />
     <Compile Include="Assets\Source\Spire\App\SceneManager.cs" />
+    <Compile Include="Assets\Source\Spire\App\SpireScript.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\Asset.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\AssetBundleLoader.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\AssetData.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\AssetManager.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\AssetManagerConfiguration.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\AssetManifest.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\EditorAssetLoader.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\IAssetLoader.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\IAssetManager.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\IAssetUpdateService.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\Services\EditorAssetUpdateService.cs" />
+    <Compile Include="Assets\Source\Spire\Asset\StandardAssetLoader.cs" />
     <Compile Include="Assets\Source\Spire\Data\AnchorData.cs" />
     <Compile Include="Assets\Source\Spire\Data\AppData.cs" />
     <Compile Include="Assets\Source\Spire\Data\AppDataManager.cs" />
-    <Compile Include="Assets\Source\Spire\Data\AssetData.cs" />
-    <Compile Include="Assets\Source\Spire\Data\AssetInfoManifest.cs" />
+    <Compile Include="Assets\Source\Spire\Data\AssetDataManifest.cs" />
+    <Compile Include="Assets\Source\Spire\Data\AssetReference.cs" />
     <Compile Include="Assets\Source\Spire\Data\ContentData.cs" />
     <Compile Include="Assets\Source\Spire\Data\FileProtocols.cs" />
     <Compile Include="Assets\Source\Spire\Data\IAppDataManager.cs" />
@@ -255,7 +254,6 @@
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Resolver\IScriptDependencyResolver.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Resolver\NullScriptingDependencyResolver.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Resolver\TypeScriptingDependencyResolver.cs" />
-    <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\ScriptReference.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Serialization\ScriptingPropertyBucket.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\UnityLogWrapper.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\UnityScriptingHost.cs" />
