--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WSAPlayer:21</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -205,7 +207,6 @@
     <Compile Include="Assets\Source\Spire\Data\PoolData.cs" />
     <Compile Include="Assets\Source\Spire\Data\SceneData.cs" />
     <Compile Include="Assets\Source\Spire\Data\ScriptData.cs" />
-    <Compile Include="Assets\Source\Spire\Data\ScriptInfo.cs" />
     <Compile Include="Assets\Source\Spire\Data\StaticData.cs" />
     <Compile Include="Assets\Source\Spire\IUX\ColorConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\Anchor.cs" />
@@ -232,7 +233,11 @@
     <Compile Include="Assets\Source\Spire\IUX\Widget\TweenConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Widget.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\WidgetConfig.cs" />
+    <Compile Include="Assets\Source\Spire\Scripting\DefaultScriptParser.cs" />
     <Compile Include="Assets\Source\Spire\Scripting\IScriptManager.cs" />
+    <Compile Include="Assets\Source\Spire\Scripting\IScriptParser.cs" />
+    <Compile Include="Assets\Source\Spire\Scripting\MonoBehaviourScriptingHost.cs" />
+    <Compile Include="Assets\Source\Spire\Scripting\ScriptManager.cs" />
     <Compile Include="Assets\Source\States\Application.cs" />
     <Compile Include="Assets\Source\States\Edit\EditApplicationState.cs" />
     <Compile Include="Assets\Source\States\Initialize\InitializeApplicationState.cs" />
@@ -250,7 +255,6 @@
     <Compile Include="Assets\Source\Util\TypeUtil.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Loader\IScriptLoader.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Loader\ResourcesScriptLoader.cs" />
-    <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\MonoBehaviourScriptingHost.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Resolver\IScriptDependencyResolver.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Resolver\NullScriptingDependencyResolver.cs" />
     <Compile Include="Assets\ThirdParty\Jint\Jint.Unity\Resolver\TypeScriptingDependencyResolver.cs" />
