--- a/spireplayer-unity-good.Editor.csproj
+++ b/spireplayer-unity-good.Editor.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>WSAPlayer:21</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -165,14 +163,14 @@
     <Reference Include="CreateAR.Trellis.Messages">
       <HintPath>Assets\Plugins\CreateAR\Commons\CreateAR.Trellis.Messages.dll</HintPath>
     </Reference>
+    <Reference Include="Polenter.SharpSerializer">
+      <HintPath>Assets\Plugins\ThirdParty\Polenter.SharpSerializer.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Assets\Plugins\ThirdParty\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="websocket-sharp">
       <HintPath>Assets\Plugins\ThirdParty\WebSocket-Sharp\websocket-sharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Polenter.SharpSerializer">
-      <HintPath>Assets\Plugins\ThirdParty\Polenter.SharpSerializer.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -184,10 +182,10 @@
   <ItemGroup>
     <Compile Include="Assets\Editor\Application\EditorApplicationHostEditorWindow.cs" />
     <Compile Include="Assets\Editor\Build\UnityBuilder.cs" />
+    <Compile Include="Assets\Editor\Test\Asset\Asset_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\AssetManager_IntegrationTests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\AssetManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\AssetManifest_Tests.cs" />
-    <Compile Include="Assets\Editor\Test\Asset\Asset_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\DummyAssetLoader.cs" />
     <Compile Include="Assets\Editor\Test\Asset\DummyAssetUpdateService.cs" />
     <Compile Include="Assets\Editor\Test\Content\ContentManager_Tests.cs" />
@@ -196,6 +194,7 @@
     <Compile Include="Assets\Editor\Test\Data\FileManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Util\StandardQueryResolver_Tests.cs" />
     <Compile Include="Assets\Editor\Tools\Asset\AssetManifestEditor.cs" />
+    <Compile Include="Assets\Editor\Tools\ContextMenuHooks.cs" />
     <Compile Include="Assets\Editor\Tools\DataMigration\SpireDataMigrator.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -221,6 +220,7 @@
     <None Include="Assets\StreamingAssets\App\SpireDemo\TuneVarData\UITuneVars.xml" />
     <None Include="Assets\StreamingAssets\App\SpireDemo\UIElementData\TeslaUIElements.xml" />
     <None Include="Assets\StreamingAssets\App\SpireDemo\UserExperienceData\Tutorials.xml" />
+    <None Include="Assets\StreamingAssets\App\StaticContentDemo\Scripts\Startup.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
