--- a/spireplayer-unity-good.Editor.csproj
+++ b/spireplayer-unity-good.Editor.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -188,6 +190,7 @@
     <Compile Include="Assets\Editor\Test\Asset\AssetManifest_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Asset\DummyAssetLoader.cs" />
     <Compile Include="Assets\Editor\Test\Asset\DummyAssetUpdateService.cs" />
+    <Compile Include="Assets\Editor\Test\Content\ContentGraph_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Content\ContentManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Content\DummyAssetManager.cs" />
     <Compile Include="Assets\Editor\Test\Content\DummyContentFactory.cs" />
