--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -165,11 +165,11 @@
     <Compile Include="Assets\Source\Main.cs" />
     <Compile Include="Assets\Source\Messages\Internal\LoadProgressEvent.cs" />
     <Compile Include="Assets\Source\Messages\MessageTypes.cs" />
-    <Compile Include="Assets\Source\Messages\ToApplication\AssetUpdateEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\AssetEvents.cs" />
     <Compile Include="Assets\Source\Messages\ToApplication\AuthorizedEvent.cs" />
-    <Compile Include="Assets\Source\Messages\ToApplication\ContentUpdateEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\ContentEvents.cs" />
     <Compile Include="Assets\Source\Messages\ToApplication\FatalErrorEvent.cs" />
-    <Compile Include="Assets\Source\Messages\ToApplication\HierarchyEvent.cs" />
+    <Compile Include="Assets\Source\Messages\ToApplication\HierarchyEvents.cs" />
     <Compile Include="Assets\Source\Messages\ToApplication\HierarchyNodeData.cs" />
     <Compile Include="Assets\Source\Messages\ToApplication\PreviewEvent.cs" />
     <Compile Include="Assets\Source\Messages\ToHost\ApplicationReadyEvent.cs" />
