Moving from HierarchyNodeMonoBehaviours to real Content.

--- a/spireplayer-unity-good.Editor.csproj
+++ b/spireplayer-unity-good.Editor.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Assets\Editor\Test\Content\ContentManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Content\DummyAssetManager.cs" />
     <Compile Include="Assets\Editor\Test\Content\DummyContentFactory.cs" />
+    <Compile Include="Assets\Editor\Test\Content\DummyPoolManager.cs" />
     <Compile Include="Assets\Editor\Test\Content\DummyScriptManager.cs" />
     <Compile Include="Assets\Editor\Test\Data\FileManager_Tests.cs" />
     <Compile Include="Assets\Editor\Test\Util\StandardQueryResolver_Tests.cs" />
