Fix selection updated.

--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2017.1.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -266,7 +268,6 @@
     <Compile Include="Assets\Source\States\Hierarchy\HierarchyApplicationState.cs" />
     <Compile Include="Assets\Source\States\Hierarchy\HierarchyFocusManager.cs" />
     <Compile Include="Assets\Source\States\Hierarchy\HierarchyManager.cs" />
-    <Compile Include="Assets\Source\States\Hierarchy\HierarchyNodeMonoBehaviour.cs" />
     <Compile Include="Assets\Source\States\Initialize\InitializeApplicationState.cs" />
     <Compile Include="Assets\Source\States\Play\PlayApplicationState.cs" />
     <Compile Include="Assets\Source\States\Preview\PreviewApplicationState.cs" />
