--- a/spireplayer-unity-good.csproj
+++ b/spireplayer-unity-good.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementRef.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchema.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchemaData.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\ElementSchemaProp.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Element\IElementFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\HsbColor.cs" />
